src/objects/LeanData__Contact_Contact_Match__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account1_Name__c</fullName>
        <label>Contact1 Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account2_Name__c</fullName>
        <label>Contact2 Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact1_Account_Name__c</fullName>
        <label>Contact1 Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact1_Id__c</fullName>
        <label>Contact1 Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact2_Account_Name__c</fullName>
        <label>Contact2 Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact2_Id__c</fullName>
        <label>Contact2 Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Match_Type__c</fullName>
        <label>Match Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Request_Id__c</fullName>
        <label>Request Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact Contact Match</label>
    <nameField>
        <label>Contact Contact Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Contact Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>